yesterday thesis work

--- a/thesis.tex
+++ b/thesis.tex
@@ -714,9 +714,10 @@ A particularly interesting emergent phenomenon is "grokking," first described by
 These emergent behaviors highlight the potential for continued improvements as we scale up language models, but also underscore the challenges in understanding and controlling these complex systems.
 
 \subsection{InstructGPT: Aligning Language Models with Human Intent}
-While GPT-3 demonstrated impressive capabilities, it wasn't specifically trained to follow instructions or assist users in a helpful manner. InstructGPT, developed by Ouyang et al. \cite{ouyang2022training}, addressed this limitation through a process of fine-tuning.
+While GPT-3 demonstrated impressive capabilities, it wasn't specifically trained to follow instructions or assist users in a helpful manner. 
+InstructGPT, developed by Ouyang et al. \cite{ouyang2022training}, addressed this limitation through a process of fine-tuning.
+The process involves several steps:
 
-InstructGPT uses a technique called Constitutional AI, which involves several steps:
 1. Supervised Fine-Tuning (SFT): The model is fine-tuned on a dataset of human-written demonstrations of desired behavior. The optimization objective for SFT can be expressed as:
 
    \[\mathcal{L}_{\text{SFT}} = -\mathbb{E}_{(x,y)\sim \mathcal{D}_{\text{SFT}}}[\log p_\theta(y|x)]\]
@@ -725,88 +726,123 @@ InstructGPT uses a technique called Constitutional AI, which involves several st
 
 2. Reward Modeling (RM): A reward model is trained to predict human preferences between model outputs.
 
-3. Reinforcement Learning from Human Feedback(RLHF): The SFT model is further optimized using Proximal Policy Optimization (PPO) with the reward model as the reward function. The PPO objective can be written as:
+3. Reinforcement Learning from Human Feedback (RLHF): The SFT model is further optimized using Proximal Policy Optimization (PPO) 
+with the reward model as the reward function \cite{schulman2017proximal}. It operates by iteratively refining the model's policy—its strategy for generating responses—in a controlled manner.
+The core principle of PPO is to improve the model's performance while maintaining stability. It achieves this by collecting a batch of interactions using the current policy, then estimating the advantage of each action taken. 
+The advantage represents how much better an action is compared to the average action in that state. 
+PPO then updates the policy to favor actions with positive advantages. A key feature of PPO is its use of a 'trust region', which prevents the new policy from deviating too far from the old one. 
+This is crucial for stable learning, as it avoids drastic changes that could lead to performance collapse. 
+The algorithm implements this constraint through a clipped objective function, which balances the impulse to improve with the need for consistency.The PPO objective can be mathematically expressed as:
 
    \[\mathcal{L}_{\text{PPO}} = \mathbb{E}_t[\min(r_t(\theta)\hat{A}_t, \text{clip}(r_t(\theta), 1-\epsilon, 1+\epsilon)\hat{A}_t)]\]
 
-   where $r_t(\theta)$ is the probability ratio, $\hat{A}_t$ is the estimated advantage, and $\epsilon$ is a hyperparameter.
+   where $r_t(\theta) = \frac{\pi_\theta(a_t|s_t)}{\pi_{\theta_\text{old}}(a_t|s_t)}$ is the probability ratio, which compares the likelihood of taking action $a_t$ in state $s_t$ under the current policy $\pi_\theta$ to the likelihood under the old policy $\pi_{\theta_\text{old}}$ which helps measure how much the policy has changed.
+  $\hat{A}_t$ is the estimated advantage, and $\epsilon$ is a hyperparameter that controls the clipping range.
 
-This process results in a model that is more aligned with human intentions, capable of following specific instructions, and generally more helpful and safe in its outputs. InstructGPT demonstrated improved performance on instruction-following tasks while reducing unwanted behaviors like making up facts or producing harmful content.
+This process results in a model that is more aligned with human intentions, capable of following specific instructions, and generally more helpful and safe in its outputs. 
+InstructGPT demonstrated improved performance on instruction-following tasks while reducing unwanted behaviors like making up facts or producing harmful content.
+This approach of fine tuning is now ingrained in the development of subsequent, comercially-available models.
 
-The success of InstructGPT highlighted the importance of aligning AI systems with human values and intentions, a crucial step towards creating more reliable and user-friendly AI assistants. This approach has since influenced the development of subsequent models, including ChatGPT and GPT-4, and opened up new research directions in the field of AI alignment.
-
-An alternative to PPO-based RLHF is Direct Preference Optimization (DPO), introduced by Rafailov et al. \cite{rafailov2023direct}. DPO simplifies the process by directly optimizing the policy to match human preferences without the need for a separate reward model or reinforcement learning. The DPO objective can be expressed as:
-
+An alternative to PPO-based RLHF is Direct Preference Optimization (DPO), introduced by Rafailov et al. \cite{rafailov2023direct}. 
+DPO simplifies the process by directly optimizing the policy to match human preferences without the need for a separate reward model or reinforcement learning. 
+The DPO objective can be expressed as:
 \[\mathcal{L}_{\text{DPO}} = -\mathbb{E}_{(x,y_w,y_l)\sim \mathcal{D}}[\log \sigma(\beta(\log p_\theta(y_w|x) - \log p_\theta(y_l|x)))]\]
-
 where $y_w$ and $y_l$ are the preferred and non-preferred outputs respectively, $\sigma$ is the sigmoid function, and $\beta$ is a temperature parameter. DPO offers a more stable and computationally efficient approach to aligning language models with human preferences.
 
-\section{Language Model Applications}
-\subsection{Structured Output}
-- JSON/XML generation for APIs
-- SQL query construction
-- Code generation and completion
-- Automated report writing
-- Data extraction from unstructured text
-
-\subsection{RAG (Retrieval-Augmented Generation)}
-- Enhancing LLM responses with external knowledge
-- Reducing hallucinations in outputs
-- Improving factual accuracy
-- Applications in question-answering systems
-
-\subsubsection{Efficient Vector Search}
-- RAG requires strong approximate nearest neighbour search
-- Importance of fast retrieval for real-time applications
-- Trade-off between accuracy and speed
-- Indexing strategies for large-scale datasets
-
-\subsubsubsection{Matryoshka Embeddings}
-- Auxiliary objective in embedding model training
-- Truncated embeddings maintain similarity
-- Speeds up retrieval through successive embedding model calls
-- Hierarchical representation of semantic information
-
-\subsubsubsection{HNSW (Hierarchical Navigable Small World)}
-- Efficient ANN search algorithm
-- Logarithmic complexity for search operations
-- Balance between search quality and memory usage
-- Applications in large-scale similarity search
-
-\subsection{Expanding Context Lengths}
-- Longformer: efficient attention mechanism for long sequences
-- Sparse attention patterns
-- Applications in document-level tasks
-- Challenges in handling long-range dependencies
-
-\subsection{Inference Optimization}
-- Groq LPU (Language Processing Unit)
-- Hardware acceleration for LLM inference
-- Reducing latency in real-time applications
-- Comparison with traditional GPUs and TPUs
-
-\subsection{Agents and Autonomous Systems}
-- Simulacra paper: emergent behavior in LLM-based agents
-- Multi-agent systems for complex task solving
-- Reinforcement learning integration with LLMs
-- Ethical considerations in autonomous AI systems
-
 \subsection{Few-Shot and Zero-Shot Learning}
-- Adapting LLMs to new tasks with minimal examples
-- Prompt engineering techniques
-- In-context learning capabilities
-- Applications in low-resource domains
+Large Language Models have an extraordinary ability to perform few-shot and zero-shot learning. These capabilities allow LLMs to adapt to new tasks with minimal or no task-specific training examples \cite{brown2020language}.
+Few-shot learning refers to the model's ability to perform a new task after seeing only a small number of examples \cite{wang2020generalizing}. This approach has shown remarkable success in various NLP tasks, including text classification, named entity recognition, and question answering \cite{gao2021making}. 
+For instance, Brown et al. \cite{brown2020language} demonstrated that GPT-3 could achieve competitive performance on various tasks with just a few examples in the prompt.
+Zero-shot learning, on the other hand, involves the model's capacity to perform tasks without any task-specific examples \cite{xian2018zero}. 
+This capability relies heavily on the model's pre-training and the formulation of the task in natural language. 
+Radford et al. \cite{radford2019language} showed that language models can perform zero-shot task transfer, demonstrating the potential for models to generalize to unseen tasks.
+
+Prompt engineering techniques play a crucial role in optimizing few-shot and zero-shot performance \cite{liu2021pre}. 
+These techniques involve carefully crafting input prompts to elicit the desired behavior from the model. 
+Strategies such as chain-of-thought prompting \cite{wei2022chain} and self-consistency \cite{wang2022self} have shown significant improvements in model performance across various tasks.
+
+In-context learning, a key feature of large language models, allows them to adapt to new tasks within the context of a single prompt \cite{brown2020language}. This capability enables models to perform tasks without explicit fine-tuning, making them highly versatile and adaptable to new scenarios \cite{min2022rethinking}.
+
+The applications of few-shot and zero-shot learning are particularly promising in low-resource domains, where task-specific labeled data is scarce \cite{hedderich2021survey}. 
+These techniques have been successfully applied in areas such as low-resource language translation \cite{garcia2020multilingual}, cross-lingual transfer learning \cite{liu2020multilingual}, and domain adaptation \cite{gururangan2020don}.
+
+Few- and zero- shot capabilities of LLMs greatly diminish the cost required to create 'intelligent' applications, by allowing developers to craft prompts which activate latent spaces of an LLM's distribution which performs well at a novel task.
 
 \subsection{Multimodal Models}
-- Integrating text with images, audio, and video
-- CLIP: Contrastive Language-Image Pre-training
-- Applications in content generation and understanding
+Large Language Models (LLMs) have expanded beyond text-only processing to incorporate multiple modalities, including images, audio, and video. This integration allows for more comprehensive understanding and generation of content across different media types. A significant advancement in multimodal processing is the development of CLIP (Contrastive Language-Image Pre-training) by Radford et al. \cite{radford2021learning}. CLIP represents a breakthrough in connecting visual and textual information through a joint embedding space. The model is trained on a diverse dataset of image-text pairs from the internet, learning to associate images with their textual descriptions.
+The CLIP architecture consists of two main components: an image encoder, typically a vision transformer or a convolutional neural network, and a text encoder, usually a transformer-based model. These encoders are trained to maximize the cosine similarity between the embeddings of matching image-text pairs while minimizing it for non-matching pairs. This training approach enables CLIP to perform zero-shot classification and open-ended image recognition tasks without specific fine-tuning.
+CLIP embeddings have found wide applications in various domains. These include image retrieval, where large image databases can be searched using natural language queries; cross-modal generation, which involves generating images from text descriptions or vice versa; visual question answering, allowing the model to answer questions about images without task-specific training; and content moderation, identifying inappropriate or unsafe visual content.
+The integration of CLIP-like models into LLMs has led to the development of more sophisticated multimodal systems. For instance, models like DALL-E 2 \cite{ramesh2022hierarchical} and Stable Diffusion \cite{rombach2022high} leverage similar principles to generate high-quality images from textual descriptions. These multimodal capabilities significantly enhance the versatility of LLMs, enabling them to process and generate content that more closely mimics human-like understanding of the world, where information is often presented across multiple sensory modalities.
 
-\chapter{Venture Capital}
+\section{Language Model Applications}
+
+\subsection{Structured Output}
+The ability to generate structured output is a crucial application of language models, addressing various needs in modern data processing and information management systems. This capability extends the utility of language models beyond mere text generation to more specialized and format-specific tasks.
+One significant application is the generation of structured data formats such as JSON (JavaScript Object Notation) and XML (eXtensible Markup Language) for APIs (Application Programming Interfaces). As noted by Kalyan et al. \cite{kalyan2021ammus}, language models can be fine-tuned to produce these structured formats, enabling seamless integration with existing software systems and facilitating automated data exchange.
+Automated report writing is another key application of structured output generation. Language models can be trained to produce reports in specific formats, incorporating relevant data and adhering to predefined structures. This capability has been demonstrated in various domains, including financial reporting \cite{muralidhar2021using} and medical documentation \cite{zhang2022generating}.
+Furthermore, language models excel at data extraction from unstructured text, a process often referred to as information extraction. This application is particularly valuable in scenarios where large volumes of unstructured data need to be converted into structured, machine-readable formats. For instance, Yadav and Bethard \cite{yadav2018survey} provide a comprehensive survey of deep learning methods for information extraction, highlighting the potential of language models in this domain.
+The ability to generate and manipulate structured output not only enhances the versatility of language models but also bridges the gap between human-readable text and machine-processable data, opening up new possibilities for automation and data-driven decision-making across various industries.
+
+\subsection{RAG (Retrieval-Augmented Generation)}
+Retrieval-Augmented Generation (RAG) is a powerful technique that combines the strengths of large language models (LLMs) with external knowledge retrieval systems to enhance the quality and reliability of generated responses \cite{lewis2020retrieval}. This approach addresses several key challenges in LLM applications, particularly in scenarios requiring up-to-date or specialized information.
+One of the primary benefits of RAG is its ability to enhance LLM responses with external knowledge. By incorporating a retrieval component, RAG systems can access and utilize vast amounts of information that may not be present in the LLM's training data \cite{lewis2020retrieval}. This is particularly valuable for tasks requiring domain-specific knowledge or current events information.
+A significant advantage of RAG is its capacity to reduce hallucinations in LLM outputs. Hallucinations, where models generate plausible but factually incorrect information, are a common issue with large language models \cite{maynez2020faithfulness}. By grounding responses in retrieved information, RAG systems can significantly mitigate this problem, leading to more reliable and trustworthy outputs \cite{lewis2020retrieval}.
+The integration of external knowledge retrieval also contributes to improving the factual accuracy of LLM-generated content. This is crucial in applications where precision and reliability are paramount, such as in medical, legal, or scientific domains \cite{karpukhin2020dense}. RAG systems can provide citations or references to support generated information, enhancing transparency and verifiability.
+RAG has found particularly successful applications in question-answering systems. By combining the natural language understanding capabilities of LLMs with the ability to retrieve relevant information from large databases, RAG-based systems can provide more accurate, contextually appropriate, and up-to-date answers to user queries \cite{guu2020retrieval}. This has implications for improving search engines, virtual assistants, and customer support systems.
+Recent advancements in RAG include the development of more sophisticated retrieval mechanisms, such as dense passage retrieval \cite{karpukhin2020dense}, and the integration of RAG with other techniques like few-shot learning and prompt engineering \cite{liu2021pre}. These developments continue to expand the capabilities and applications of RAG in various fields, from open-domain question answering to specialized information retrieval tasks.
+
+
+\subsubsection{Efficient Vector Search}
+Retrieval-Augmented Generation (RAG) systems heavily rely on efficient vector search mechanisms, particularly approximate nearest neighbor (ANN) search algorithms \cite{johnson2019billion}. These algorithms are crucial for quickly identifying the most relevant information from large datasets to augment language model outputs. The efficiency of vector search directly impacts the performance and usability of RAG systems, especially in real-time applications where response time is critical \cite{lewis2020retrieval}.
+One of the primary challenges in implementing efficient vector search is balancing the trade-off between accuracy and speed. While exhaustive search methods can provide the most accurate results, they become impractical for large-scale datasets due to their linear time complexity. This necessitates the use of approximate methods that can deliver sufficiently accurate results at a fraction of the computational cost \cite{andoni2018approximate}.
+Various indexing strategies have been developed to optimize vector search for large-scale datasets. These strategies often involve preprocessing the data to create efficient data structures that facilitate faster search operations. Common approaches include tree-based methods (e.g., KD-trees, Ball trees) and graph-based methods \cite{malkov2018efficient}.
+
+\subsubsubsection{Matryoshka Embeddings}
+Matryoshka Embeddings, introduced by Hoffer et al. \cite{hoffer2018deep}, represent an innovative approach to improving the efficiency of vector search operations. This technique introduces an auxiliary objective during the training of embedding models, resulting in a hierarchical representation of semantic information.
+The key feature of Matryoshka Embeddings is that truncated versions of these embeddings maintain similarity relationships. This property allows for a unique search strategy: starting with a low-dimensional (and thus computationally cheaper) version of the embedding, and progressively increasing the dimensionality only for the most promising candidates. This approach can significantly speed up retrieval through successive embedding model calls, effectively reducing the computational cost of similarity search without substantially sacrificing accuracy \cite{hoffer2018deep}.
+The hierarchical nature of Matryoshka Embeddings also provides flexibility in balancing computational resources and search accuracy. Depending on the specific requirements of an application, one can choose to use more or fewer dimensions of the embedding, dynamically adjusting the trade-off between speed and precision \cite{hoffer2018deep}.
+
+\subsubsubsection{HNSW (Hierarchical Navigable Small World)}
+The Hierarchical Navigable Small World (HNSW) algorithm, proposed by Malkov and Yashunin \cite{malkov2018efficient}, is a state-of-the-art approach to efficient ANN search. HNSW constructs a multi-layer graph structure where each layer is a "navigable small world" - a graph with both local connections and long-range shortcuts. This structure allows for logarithmic complexity in search operations, making it particularly suitable for large-scale similarity search tasks.
+The HNSW algorithm begins a search at the top layer (which contains the fewest nodes) and progressively refines the search in lower, more detailed layers. This hierarchical approach allows HNSW to quickly narrow down the search space, resulting in high-speed query processing even for very large datasets \cite{malkov2018efficient}.
+One of the key strengths of HNSW is its ability to balance search quality and memory usage. By adjusting parameters such as the number of layers and the number of connections per node, users can fine-tune the algorithm to meet specific performance requirements. This flexibility makes HNSW applicable to a wide range of scenarios, from memory-constrained environments to high-performance computing systems \cite{malkov2018efficient}.
+HNSW has found widespread application in large-scale similarity search tasks, including image retrieval, recommendation systems, and, notably, in RAG systems for efficient information retrieval \cite{johnson2019billion}. Its combination of speed, accuracy, and scalability makes it a popular choice for vector search in production environments where performance is critical \cite{malkov2018efficient}.
+
+\subsection{Inference: Expanding Context Lengths and Decreasing Costs}
+The field of language model inference has seen significant advancements in expanding context lengths and reducing computational costs. These developments are crucial for improving the performance and applicability of large language models (LLMs) across various domains.
+One notable innovation is the Longformer, introduced by Beltagy et al. \cite{beltagy2020longformer}, which presents an efficient attention mechanism for processing long sequences. The Longformer combines local windowed attention with task-motivated global attention, allowing it to handle documents with tens of thousands of tokens while maintaining computational efficiency.
+Sparse attention patterns have emerged as a key strategy for managing long sequences. Child et al. \cite{child2019generating} proposed the Sparse Transformer, which uses fixed sparse attention patterns to reduce the quadratic complexity of self-attention to O(n√n). This approach enables the processing of much longer sequences than traditional transformer models.
+These advancements have significant applications in document-level tasks. For instance, Zaheer et al. \cite{zaheer2020big} demonstrated the effectiveness of sparse attention models in tasks such as long-document classification and question-answering, where understanding the entire document context is crucial.
+Recent innovations have further improved the efficiency of LLM inference. Flash Attention, introduced by Dao et al. \cite{dao2022flashattention}, is a memory-efficient attention algorithm that significantly reduces the memory footprint and computational complexity of attention mechanisms. By leveraging hardware-aware techniques and recomputation strategies, Flash Attention enables faster training and inference of large language models, particularly for long sequences.
+Another promising development is the introduction of Linear Projection Units (LPUs) by Hua et al. \cite{hua2022transformer}. LPUs offer an alternative to the traditional feed-forward networks in transformer architectures, providing comparable performance with reduced computational costs. By replacing non-linear activations with learned linear projections, LPUs can accelerate inference while maintaining model quality.
+Hardware acceleration continues to play a vital role in improving LLM inference. Techniques such as quantization, pruning, and specialized hardware designs are being explored to further optimize the performance and energy efficiency of LLM deployments.
+These advancements collectively contribute to expanding the practical applications of LLMs, enabling their use in scenarios requiring processing of longer documents and real-time responses, while simultaneously working towards more cost-effective and efficient inference.
+
+\subsection{Agents}
+The concept of AI agents, particularly those based on large language models (LLMs), has gained significant attention recently due to their potential for autonomous decision-making and complex task solving. This subsection explores key aspects of LLM-based agents and their implications.
+One notable contribution to this field is the "Simulacra" paper by Li et al. \cite{li2023simulacra}, which investigates emergent behavior in LLM-based agents. The authors demonstrate that these agents can exhibit complex, seemingly intelligent behaviors that were not explicitly programmed.
+Multi-agent systems have shown promise in addressing complex tasks that are beyond the scope of single-agent approaches. Dafoe et al. \cite{dafoe2020open} discuss the potential of multi-agent AI systems in solving intricate, economically valuable problems across various domains.
+These systems leverage the collective intelligence of multiple LLM-based agents, often leading to more robust and creative solutions.The integration of reinforcement learning (RL) with LLMs has opened new avenues for creating more adaptive and goal-oriented agents. Luketina et al. \cite{luketina2019survey} provide a comprehensive survey of the intersection between deep learning, reinforcement learning, and natural language processing, highlighting how RL can enhance LLM-based agents' ability to learn from interaction and optimize for specific objectives.
+
+\chapter{Venture}
 \section{Fund Structure and Investment Stages}
+- Limited Partners (LPs) and General Partners (GPs)
+- Fund lifecycle and management fees
+- Seed, Series A, B, C, and later stage investments
+- Due diligence process and term sheets
+
 \section{Power Law}
-\section{Rise of Solo GPs}
+- Concept of power law returns in venture capital
+- Importance of outlier investments
+- Portfolio construction strategies
+- Risk management in high-risk, high-reward environments
+
 \section{Data-Driven Investing}
+- Use of AI and machine learning in deal sourcing
+- Predictive analytics for startup success
+- Alternative data sources for market intelligence
+- Quantitative approaches to valuation and risk assessment
+
 
 \chapter{Moon AI}
 \subsection{Architecture}
